--- a/petstagram/templates/accounts/profile-edit-page.html
+++ b/petstagram/templates/accounts/profile-edit-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% block base_content %}
     <!-- Start Edit Profile Section -->
     <div class="edit-delete">
