--- a/petstagram/templates/base/partials/nav.html
+++ b/petstagram/templates/base/partials/nav.html
@@ -1,21 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<!-- Starts Head Section -->
-<head>
-    <link rel="stylesheet"
-          href="{% static 'css/styles.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
-    <title>Petstagram</title>
-</head>
-<!-- End Head Section -->
-
-<!-- Starts Body Section -->
-<body>
-
-<!-- Starts Header Section with Navigation Bar -->
-<header>
-    <nav class="navbar">
+<nav class="navbar">
         <div class="container">
             <div class="logo">
                 <!-- Link to Home Page -->
@@ -63,8 +47,7 @@
                     <li class="nav-item">
 
                         <!-- Link to Profile Page -->
-{#                        <a href="{% url 'profile details' pk %}">#}
-                        <a href="#">
+                        <a href="{% url 'profile details' pk=1 %}">
                             <i>Profile</i>
                         </a>
                     </li>
@@ -72,25 +55,3 @@
             </div>
         </div>
     </nav>
-</header>
-<!-- End Header Section with Navigation Bar -->
-
-<!-- Starts Main Section -->
-<main>
-
-{% block base_content %}
-{% endblock %}
-
-</main>
-<!-- End Main Section -->
-
-<!-- Start Footer Section -->
-<div class="footer">
-		<span class="footer-section">
-			© 2022 SOFTUNI WORKSHOP FOR PYTHON WEB MODULE
-		</span>
-</div>
-<!-- End Footer Section -->
-
-</body>
-</html>
