--- a/petstagram/templates/common/home-page.html
+++ b/petstagram/templates/common/home-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 {% block base_content %}
     <div class="container">
@@ -21,7 +21,7 @@
                 <div class="top">
                     <div class="userDetails">
                         <!-- Link to User Profile Page -->
-                        <a href="#">
+                        <a href="{% url 'profile details' pk=1 %}">
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
@@ -32,7 +32,7 @@
                         </a>
                         <h3>
                             <!-- Link to User Profile Page -->
-                            <a href="#">
+                            <a href="{% url 'profile details' pk=1 %}">
                                 <!-- if user has first name and last name -->
                                 Diyan Kalaydzhiev
                                 <!-- else -->
@@ -127,14 +127,14 @@
 
                     <!-- Start Tagged Pets -->
                     <!-- Link to First Tagged Pet Details Page-->
-                    <a href="#">
+                    <a href="{% url 'pet details' username='Tanya' pet_name='Pesho' %}">
                         <p class="message">
                             <b>Sasho</b>
                         </p>
                     </a>
 
                     <!-- Link to Second Tagged Pet Details Page-->
-                    <a href="#">
+                    <a href="{% url 'pet details' username='Tanya' pet_name='Pesho' %}">
                         <p class="message">
                             <b>Some other fish</b>
                         </p>
@@ -142,7 +142,7 @@
                     <!-- End Tagged Pets -->
 
                     <!-- Link to Photo Details Page -->
-                    <a href="#">
+                    <a href="{% url 'pet details' username='Tanya' pet_name='Pesho' %}">
                         <h4 class="details">See details</h4>
                     </a>
 
@@ -177,7 +177,7 @@
                 <div class="top">
                     <!-- User Details and image location -->
                     <div class="userDetails">
-                        <a href="profile details">
+                        <a href="{% url 'profile details' pk=1 %}">
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
@@ -187,7 +187,7 @@
                             </div>
                         </a>
                         <h3>
-                            <a href="profile details">
+                            <a href="{% url 'profile details' pk=1 %}">
                                 <!-- if user has first name and last name -->
                                 Antonia Hristova
                                 <!-- else -->
@@ -275,7 +275,7 @@
                     </a>
 
                     <!-- tagged pets -->
-                    <a href="pet profile">
+                    <a href="{% url 'pet details' username='Tanya' pet_name='Pesho' %}">
                         <p class="message">
                             <b>Bucky</b>
                         </p>
@@ -312,7 +312,7 @@
                 <div class="top">
                     <!-- User Details and image location -->
                     <div class="userDetails">
-                        <a href="profile details">
+                        <a href="{% url 'profile details' pk=1 %}">
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
@@ -322,7 +322,7 @@
                             </div>
                         </a>
                         <h3>
-                            <a href="profile details">
+                            <a href="{% url 'profile details' pk=1 %}">
                                 <!-- if user has first name and last name -->
                                 Steven Ivanov
                                 <!-- else -->
@@ -335,10 +335,12 @@
                     </div>
                     <!--  -->
                 </div>
-                <!-- Post image -->
+
+                 <!-- Post image -->
                 <div class="imgBx" id="place the id of the photo here">
-                    <img src="{% static 'images/dog-on-road.jpg' %}" alt="post" class="cover">
+                    <img src="{% static 'images/dog-on-bed.jpg' %}" alt="post" class="cover">
                 </div>
+                <!-- -->
                 <!-- -->
 
                 <div class="bottom">
@@ -410,7 +412,7 @@
                     </a>
 
                     <!-- tagged pets -->
-                    <a href="pet profile">
+                    <a href="{% url 'pet details' username='Tanya' pet_name='Pesho' %}">
                         <p class="message">
                             <b>Donny</b>
                         </p>
