--- a/petstagram/templates/pets/pet-edit-page.html
+++ b/petstagram/templates/pets/pet-edit-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% block base_content %}
     <!-- Start Edit Pet Section -->
     <div class="edit-delete edit-photo">
