--- a/petstagram/templates/base/partials/user-posts-details.html
+++ b/petstagram/templates/base/partials/user-posts-details.html
@@ -30,13 +30,13 @@
             <div class="edit-delete-btns">
 
                 <!-- Link to Edit Pet Photo Page -->
-                <a href="{% url 'photo edit' pk=1 %}">
+                <a href="{% url 'photo edit' pk=photo.pk %}">
                     <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
                          alt="edit button">
                 </a>
 
                 <!-- Link to Delete Pet Photo Page -->
-                <a href="{% url 'photo edit' pk=1 %}">
+                <a href="{% url 'photo delete' pk=photo.pk %}">
                     <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                 </a>
             </div>
