--- a/petstagram/templates/accounts/register-page.html
+++ b/petstagram/templates/accounts/register-page.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load custom_filters %}
 
 {% block base_content %}
 
@@ -9,15 +10,16 @@
 
             <!-- Start Register Form -->
             <form method='POST' action="{% url 'register' %}">
-                <input type="text" placeholder="Username">
+                {{ form.username.errors }}
+                {{ form.username|placeholder:'Username' }}
+                {{ form.email.errors }}
+                {{ form.email|placeholder:'Email'}}
+                {{ form.password1.errors }}
+                {{ form.password1|placeholder:'Password' }}
+                {{ form.password2.errors }}
+                {{ form.password2|placeholder:'Repeat password'}}
+                {% csrf_token %}
 
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
-
-                <!-- Register Button -->
                 <button type="submit">Register</button>
             </form>
             <!-- End Register Form -->
