--- a/petstagram/templates/base/partials/nav-bar.html
+++ b/petstagram/templates/base/partials/nav-bar.html
@@ -24,23 +24,34 @@
                         <i>Add Photo</i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="{% url 'login' %}">
-                        <i>Login</i>
-                    </a>
-                </li>
-                <li class="nav-item">
+                {% if not user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}">
+                            <i>Login</i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
 
-                    <a href="{% url 'register' %}">
-                        <i>Register</i>
-                    </a>
-                </li>
+                        <a href="{% url 'register' %}">
+                            <i>Register</i>
+                        </a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
 
                     <a href="{% url 'profile details' pk=1 %}">
                         <i>Profile</i>
                     </a>
                 </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+
+                        <a href="{% url 'logout' %}">
+                            <i>Logout</i>
+                        </a>
+                    </li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
