--- a/petstagram/templates/accounts/profile-delete-page.html
+++ b/petstagram/templates/accounts/profile-delete-page.html
@@ -2,19 +2,21 @@
 {% load static %}
 {% block base_content %}
 
-    <!-- Start Delete Profile Section -->
-        <div class="delete-profile">
-            <h1>
-                Are you sure you want to delete your profile?
-            </h1>
+    <div class="delete-profile">
+        <h1>
+            Are you sure you want to delete your profile?
+        </h1>
+        <form method="post" action="{% url 'profile delete' pk=request.user.pk %}">
+            {{ form }}
+            {% csrf_token %}
             <div class="sure-buttons">
-                <!-- Yes (Delete Profile) Button -->
                 <button>Yes</button>
-                <!-- Go Back Button -->
                 <a class="edit-btn" href="javascript:history.back()">Go Back</a>
             </div>
             <img src="{% static 'images/are_you_sure_cat.gif' %}" alt="are you sure cat git">
-        </div>
-    <!-- End Delete Profile Section -->
+        </form>
+    </div>
+
+
 
 {% endblock %}
