--- a/petstagram/templates/base/partials/user-posts-details.html
+++ b/petstagram/templates/base/partials/user-posts-details.html
@@ -1,48 +1,47 @@
 {% load static %}
-<!-- Start User Details and Image Location -->
+
 <div class="top">
     <div class="userDetails">
-        <!-- Link to User Profile Page -->
-        <a href="{% url 'profile details' pk=1 %}">
+        <a href="{% url 'profile details' pk=photo.user.pk %}">
             <div class="profilepic">
                 <div class="profile_img">
                     <div class="image">
-                        <img src="{% static 'images/person.png' %}" alt="img8">
+                        {% if not photo.user.profile_picture %}
+                            <img src="{% static 'images/person.png' %}" alt="default image">
+                        {% else %}
+                            <img src="{{ photo.user.profile_picture }}" alt="profile image">
+                        {% endif %}
                     </div>
                 </div>
             </div>
         </a>
         <h3>
-
-            <!-- Link to User Profile Details Page -->
-            <a href="{% url 'profile details' pk=1 %}">
-                <!-- IF user has first name and last name -->
-                Diyan Kalaydzhiev
-                <!-- else -->
-                <!-- show user username -->
+            <a href="{% url 'profile details' pk=photo.user.pk %}">
+                {% if photo.user.full_name %}
+                    {{ photo.user.full_name }}
+                {% else %}
+                    {{ photo.user.username }}
+                {% endif %}
             </a>
             <br>
 
-            <!-- IF the photo has location -->
-            <span>{{ photo.location }}</span>
+            {% if photo.location %}
+                <span>{{ photo.location }}</span>
+            {% endif %}
 
-            <!-- IF the viewer is the creator of the photo -->
-            <div class="edit-delete-btns">
+            {% if photo.user == request.user %}
+                <div class="edit-delete-btns">
 
-                <!-- Link to Edit Pet Photo Page -->
-                <a href="{% url 'photo edit' pk=photo.pk %}">
-                    <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
-                         alt="edit button">
-                </a>
-
-                <!-- Link to Delete Pet Photo Page -->
-                <a href="{% url 'photo delete' pk=photo.pk %}">
-                    <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
-                </a>
-            </div>
-            <!-- End IF the viewer is the creator of the photo -->
+                    <a href="{% url 'photo edit' pk=photo.pk %}">
+                        <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
+                             alt="edit button">
+                    </a>
+                    <a href="{% url 'photo delete' pk=photo.pk %}">
+                        <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
+                    </a>
+                </div>
+            {% endif %}
         </h3>
-
     </div>
 </div>
-    <!-- End User Details and Image Location Section -->
+
