--- a/petstagram/templates/pets/pet-details-page.html
+++ b/petstagram/templates/pets/pet-details-page.html
@@ -7,23 +7,19 @@
             <div class="profile-data">
                 <div class="profile_img">
                     <div class="image">
-                        <!-- Pet URL Image -->
-                        <img src="media/{{ pet.personal_photo }}"
+                        <img src="{{ pet.personal_photo }}"
                              alt="img8">
                     </div>
                 </div>
                 <div class="personal">
                     <div class="edit">
-                        <!-- Pet Name -->
                         <p>{{ pet.name }}</p>
-                        <!-- Pet Edit Button -->
                         <a href="{% url 'pet edit' username=username pet_slug=pet.slug %}">
                             <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
-                        </a>
-                        <!-- Pet Delete Button -->
-                        <a href="{% url 'pet delete' username=username pet_slug=pet.slug %}">
-                            <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
-                        </a>
+
+                            <a href="{% url 'pet delete' username=username pet_slug=pet.slug %}">
+                                <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
+                            </a>
                     </div>
                     <div class="data">
                         <!-- Pet Total Photos -->
