--- a/petstagram/templates/pets/pet-edit-page.html
+++ b/petstagram/templates/pets/pet-edit-page.html
@@ -4,7 +4,7 @@
     <div class="edit-delete edit-photo">
         <h2>Edit Pet</h2>
         <!-- Start Edit Pet From -->
-        <form method='post' action="{% url 'pet edit' username=username pet_slug=pet_slug %}">
+        <form method='post' action="{% url 'pet edit' username=username pet_slug=pet.slug %}">
             {{ form.as_p }}
             {% csrf_token %}
             <!-- Edit Pet Button -->
